--- a/assets/style.css
+++ b/assets/style.css
@@ -16,3 +16,66 @@ p {
     color: var(--mainTextColor);
 }
 
+header{
+
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 2%;
+
+    
+    
+}
+
+h1,h2 {
+
+    color: var(--mainTextColor);
+    text-align: center;
+    
+}
+
+nav{
+   width: 25%; 
+   display: flex;
+   justify-content: space-between;
+    
+    color: var(--mainTextColor);
+}
+
+nav ul{
+    
+    display: flex;
+    flex-flow: row wrap;
+     flex: 1 0 25%;
+    justify-content: space-evenly;
+    align-content: center;
+
+}
+
+main{
+
+ display: flex;
+ flex-wrap: wrap;
+ align-items: flex-start;
+ justify-content: space-between;
+
+ color: var(--mainTextColor);   
+ margin: 5%;
+
+}
+
+    
+section{
+
+  flex: 1 0 100%;
+  padding: 1%;
+  margin: 2%;
+  text-align: center;
+ 
+}
+
+
+footer{
+
+    text-align: center;
+}
