--- a/assets/style.css
+++ b/assets/style.css
@@ -18,37 +18,60 @@ p {
 
 header{
 
-    display: flex;
+    /* display: flex;
     justify-content: space-between;
     width: 100%;
-    padding: 2%;
+    padding: 2%; */
+    display: flex;
+    flex: 1 0 100%;
+    justify-content: space-between;
+    align-items: center;
+    padding: .2%;
 
-    
-    
+
+
+}
+header img {
+
+    flex: 1 0 10%;
 }
 
-h1,h2 {
+h1{
 
     color: var(--mainTextColor);
-    text-align: center;
-    
+    flex: 1 0 0;
+    align-items: center;
+}
+
+h2 {
+
+    color: var(--mainTextColor);
+    /* text-align: center; */
+
 }
 
 nav{
-   width: 25%; 
-   display: flex;
-   justify-content: space-between;
-    
+
     color: var(--mainTextColor);
+    flex: 1 0 5%;
+
 }
 
 nav ul{
-    
-    display: flex;
-    flex-flow: row wrap;
-     flex: 1 0 25%;
+
+
+    display:flex;
     justify-content: space-evenly;
-    align-content: center;
+    align-items: center;
+    color: var(--mainTextColor);
+
+}
+
+
+a{
+
+    text-decoration: none;
+    color: var(--mainTextColor);
 
 }
 
@@ -56,22 +79,27 @@ main{
 
  display: flex;
  flex-wrap: wrap;
- align-items: flex-start;
+ /* align-items: flex-start; */
  justify-content: space-between;
 
- color: var(--mainTextColor);   
+ color: var(--mainTextColor);
  margin: 5%;
 
 }
 
-    
+
 section{
 
-  flex: 1 0 100%;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+  
+flex: 1 0 100%;
   padding: 1%;
   margin: 2%;
+  align-items: center;
   text-align: center;
- 
+
 }
 
 
