--- a/assets/style.css
+++ b/assets/style.css
@@ -26,7 +26,7 @@ header{
     flex: 1 0 100%;
     justify-content: space-between;
     align-items: center;
-    padding: .2%;
+    padding: 2%;
 
 
 
@@ -46,7 +46,10 @@ h1{
 h2 {
 
     color: var(--mainTextColor);
-    /* text-align: center; */
+    margin: 1%;
+    font-size: 20px;
+     text-align: center; 
+
 
 }
 
@@ -75,35 +78,133 @@ a{
 
 }
 
+#mainBody{
+ display:flex;
+ flex-wrap: wrap;
+ flex-direction: row;
+ 
+
+
+
+}
+
+aside{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+   margin-bottom: 10px;
+
+}
+
+aside img{
+
+border: solid white;
+height: 30px;
+width:30px;
+padding: 2px;
+
+
+}
+
+.socialMedia{
+
+display:flex;
+flex-wrap: wrap;
+flex-direction: column;
+align-items: center;
+justify-content: space-between;
+height:100%;
+
+}
+.contact{
+    flex: 1 1 0;
+    text-align: justify;
+    padding: .7%;
+    margin-right: 1%;
+  
+    line-height: 20px;
+    font-size: medium;
+    background-color: darkblue;
+    height: auto;
+   
+}
+
+
+
 main{
 
- display: flex;
- flex-wrap: wrap;
- /* align-items: flex-start; */
- justify-content: space-between;
 
  color: var(--mainTextColor);
- margin: 5%;
-
-}
-
-
-section{
-
+ margin: 1%; 
 display: flex;
-flex-direction: column;
-justify-content: space-between;
-  
-flex: 1 0 100%;
-  padding: 1%;
-  margin: 2%;
-  align-items: center;
-  text-align: center;
+flex-wrap: wrap;
+flex: 1 1 60%;
+}
+
+
+.myContent{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
+
+    flex: 1 1 100%;
+    text-align: justify;
+    padding: 15px;
+    /* align-items: center; */
+    line-height: 20px;
+    font-size: medium;
+background-color: darkblue;  
+
 
 }
 
+.aboutMe{
+    align-content: center;
+    padding: 2px;
+}
+
+
+
+figure{
+
+height: 300px;
+width:300px;
+border: solid;
+margin-bottom: 10px;
+align-self: center;
+
+}
+
+.project{
+
+
+    display: flex;
+    flex-flow:row wrap ;
+    justify-content: space-between;
+  
+   
+
+
+}
+
+.project div {
+
+    height: 200px;
+    width: 200px;
+    border: solid ;
+}
 
 footer{
 
-    text-align: center;
+  
+  background-color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: auto;
+  min-height: 70px;
+  padding: 15px;
+  text-align: center;
 }
