--- a/assets/style.css
+++ b/assets/style.css
@@ -83,16 +83,14 @@ a{
  flex-wrap: wrap;
  flex-direction: row;
  
-
-
-
 }
 
 aside{
 
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    margin-top: 15px;
    margin-bottom: 10px;
 
 }
@@ -100,37 +98,52 @@ aside{
 aside img{
 
 border: solid white;
-height: 30px;
-width:30px;
-padding: 2px;
+height: 60px;
+width: 60px;
+padding: 10px;
 
 
 }
 
-.socialMedia{
 
-display:flex;
-flex-wrap: wrap;
-flex-direction: column;
-align-items: center;
-justify-content: space-between;
-height:100%;
 
-}
 .contact{
-    flex: 1 1 0;
-    text-align: justify;
+    flex: 1 1 15%;
     padding: .7%;
     margin-right: 1%;
   
     line-height: 20px;
     font-size: medium;
-    background-color: darkblue;
+    /* background-color: darkblue; */
     height: auto;
    
 }
 
+/* Class on Link with Me in aside */
+.socialMedia{
 
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height:100%;
+    
+    }
+
+    .socialMedia img{
+    
+    margin:1.5%;
+        
+    }
+
+    .chat{
+
+        margin:.5%;
+        text-align: center;
+        line-height: 1.5;
+       color:var( --mainTextColor);
+    }
 
 main{
 
@@ -154,7 +167,7 @@ flex: 1 1 60%;
     /* align-items: center; */
     line-height: 20px;
     font-size: medium;
-background-color: darkblue;  
+/* background-color: darkblue;   */
 
 
 }
@@ -177,14 +190,9 @@ align-self: center;
 }
 
 .project{
-
-
     display: flex;
     flex-flow:row wrap ;
     justify-content: space-between;
-  
-   
-
 
 }
 
@@ -198,7 +206,7 @@ align-self: center;
 footer{
 
   
-  background-color: red;
+  /* background-color: red; */
   display: flex;
   justify-content: center;
   align-items: center;
