--- a/assets/style.css
+++ b/assets/style.css
@@ -26,21 +26,25 @@ header{
     flex: 1 0 100%;
     justify-content: space-between;
     align-items: center;
-    padding: 2%;
+    padding: 3%;
 
 
 
 }
-header img {
+/* header img {
 
-    flex: 1 0 10%;
-}
+    flex: 1 1 0;
+    
+    border: solid white;
+} */
 
 h1{
 
     color: var(--mainTextColor);
     flex: 1 0 0;
     align-items: center;
+    font-weight: bolder;
+
 }
 
 h2 {
@@ -54,9 +58,9 @@ h2 {
 }
 
 nav{
-
+    
     color: var(--mainTextColor);
-    flex: 1 0 5%;
+    flex: 1 0 0;
 
 }
 
@@ -64,6 +68,7 @@ nav ul{
 
 
     display:flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
     color: var(--mainTextColor);
@@ -123,11 +128,12 @@ padding: 10px;
 .socialMedia{
 
     display:flex;
-    flex-wrap: wrap;
     flex-direction: column;
-    align-items: center;
     justify-content: space-between;
-    height:100%;
+    padding: 1%;
+    flex-wrap: wrap;
+    align-items: center;
+    
     
     }
 
@@ -163,9 +169,9 @@ flex: 1 1 60%;
 
     flex: 1 1 100%;
     text-align: justify;
-    padding: 15px;
+    /* padding: 15px; */
     /* align-items: center; */
-    line-height: 20px;
+    line-height: 1.5;
     font-size: medium;
 /* background-color: darkblue;   */
 
@@ -180,7 +186,7 @@ flex: 1 1 60%;
 
 
 figure{
-
+display: flex;
 height: 300px;
 width:300px;
 border: solid;
@@ -193,13 +199,28 @@ align-self: center;
     display: flex;
     flex-flow:row wrap ;
     justify-content: space-between;
+    
+    width: 100%;
+    padding: 1%;
 
 }
 
+
+.project img {
+
+    width: 15%;
+    min-width: 200px;
+    min-height: 200px;
+    margin-bottom: 1%;
+
+
+
+    border: solid white;
+}
 .project div {
 
-    height: 200px;
-    width: 200px;
+    
+    width: 15%;
     border: solid ;
 }
 
@@ -216,3 +237,95 @@ footer{
   padding: 15px;
   text-align: center;
 }
+
+.linkWithMe {
+
+
+    flex-direction: column;
+    height: 100%;
+    /* padding: 20%; */
+    display: flex;
+
+}
+
+/* media queries */
+
+@media only screen and (min-width: 320px)and (max-width: 629px){
+
+    .project{
+        flex-flow:column wrap ;
+        align-content: center;
+        padding: 1%;
+    
+    }
+
+    .socialMedia {
+        
+        flex-direction: row;
+        padding:1%;
+        margin-bottom: 1%;
+       
+    }
+header {
+    justify-content: space-evenly;
+
+} 
+
+    h1{
+        text-align: center;
+        font-size: 15px;
+        line-height: 1.5;
+    }
+
+    h2{
+
+        font-size: 15px;
+    }
+    nav ul {
+        flex-direction: column;
+
+
+    }
+    a{
+
+       font-size: 15px;
+    
+    }
+}
+
+
+@media only screen and (min-width: 630px)and (max-width: 680px){
+
+
+ h1{
+
+    font-size: 25px;
+
+}
+
+.socialMedia{
+
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+
+
+}  
+
+
+@media only screen and (min-width: 681px)and (max-width: 970px){
+
+.socialMedia{
+
+   justify-content: flex-start;
+    height:100%;
+}
+.project{
+    flex-flow:row wrap ;
+   justify-content: space-evenly;
+   padding: 0;
+
+}
+   
+   } 
