--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,8 @@
 
 :root{
 
-    --mainBackgroundColor: black;
-    --mainTextColor: white;
+    --mainBackgroundColor: white;
+    --mainTextColor: black;
 }
 
 
@@ -18,25 +18,14 @@ p {
 
 header{
 
-    /* display: flex;
-    justify-content: space-between;
-    width: 100%;
-    padding: 2%; */
-    display: flex;
+     display: flex;
     flex: 1 0 100%;
     justify-content: space-between;
     align-items: center;
     padding: 3%;
 
-
-
 }
-/* header img {
 
-    flex: 1 1 0;
-    
-    border: solid white;
-} */
 
 h1{
 
@@ -47,15 +36,6 @@ h1{
 
 }
 
-h2 {
-
-    color: var(--mainTextColor);
-    margin: 1%;
-    font-size: 20px;
-     text-align: center; 
-
-
-}
 
 nav{
     
@@ -110,16 +90,23 @@ padding: 10px;
 
 }
 
+h2 {
+
+    color: var(--mainTextColor);
+    margin: 1%;
+    font-size: 20px;
+     text-align: center; 
 
 
+}
+
+/* Class on aside */
 .contact{
     flex: 1 1 15%;
     padding: .7%;
     margin-right: 1%;
-  
     line-height: 20px;
     font-size: medium;
-    /* background-color: darkblue; */
     height: auto;
    
 }
@@ -143,6 +130,17 @@ padding: 10px;
         
     }
 
+    .linkWithMe {
+
+
+        flex-direction: column;
+        height: 100%;
+        /* padding: 20%; */
+        display: flex;
+    
+    }
+
+    /* Class on Chat with Me in aside */
     .chat{
 
         margin:.5%;
@@ -169,11 +167,10 @@ flex: 1 1 60%;
 
     flex: 1 1 100%;
     text-align: justify;
-    /* padding: 15px; */
-    /* align-items: center; */
+    
     line-height: 1.5;
     font-size: medium;
-/* background-color: darkblue;   */
+
 
 
 }
@@ -187,47 +184,67 @@ flex: 1 1 60%;
 
 figure{
 display: flex;
-height: 300px;
-width:300px;
-border: solid;
+
+
 margin-bottom: 10px;
 align-self: center;
 
 }
 
-.project{
-    display: flex;
-    flex-flow:row wrap ;
-    justify-content: space-between;
-    
-    width: 100%;
-    padding: 1%;
+figure img{
 
+    width: 200px;
+    height:200px;
+    
+}
+
+.project{
+  
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    flex: 1 0 0;
+    padding: 10px;
+    text-align: center;
+    border-style: solid;
+    border-width: 1px;
 }
 
 
 .project img {
 
-    width: 15%;
-    min-width: 200px;
-    min-height: 200px;
-    margin-bottom: 1%;
-
-
-
-    border: solid white;
+    width: 100%;
+    min-width: 400px;
 }
-.project div {
 
-    
-    width: 15%;
-    border: solid ;
-}
+.projectCard{
+
+    flex: 1 0 0;
+    padding: 10px;
+    text-align: center;
+    border-style: solid;
+    border-width: 1px;
+  }
+
+  .projectCard header {
+    padding: 20px;
+    font-weight: 800;
+
+  }
+
+  .projectCard img{
+   
+        width: 100%;
+        min-width: 200px;
+      }
+  #firstChild{
+
+    flex-grow: 3;
+  }
 
 footer{
 
-  
-  /* background-color: red; */
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -238,15 +255,16 @@ footer{
   text-align: center;
 }
 
-.linkWithMe {
 
 
-    flex-direction: column;
-    height: 100%;
-    /* padding: 20%; */
-    display: flex;
 
-}
+/* pseudo classes */
+
+a:hover {
+    color: blue;
+  }
+
+
 
 /* media queries */
 
